--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-$baseurl: {{ site.baseurl }};
+$baseurl:"{{ site.baseurl }}";
 
 @import
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
