edition summary table pushed to content bottom
+ img alt
+ img size tags to avoid reflow, can't use custom plugin with default
gh-pages deploy

--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,2 +1,6 @@
-<link rel="icon" href="{{ "/favicon.svg" | relative_url }}">
+<link rel="icon" href="{{ '/favicon.svg' | relative_url }}">
 <meta name="theme-color" content="#f8f8f8">
+{% if page.image.path and page.collection == "editions" %}
+<meta name="thumbnail" content="{{ page.image.path | absolute_url }}" />
+{% endif %}
+
