--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,15 @@
 <footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+  <data class="u-url" href="{{ '/' | relative_url }}"></data>
 
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
       <div class="logo-image" class="footer-col">
-          <img src="{{ "/favicon.svg" | relative_url }}" width="125" height="125">
+          <img src="{{ '/favicon.svg' | relative_url }}" width="125" height="125">
       </div>
       <div class="footer-col">
         <p>
-          <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+          <a class="site-title" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
         </p>
         <p>{{ site.description | escape }}</p>
         <a href="{{ site.github.repository_url }}">View source on GitHub</a>
