--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -21,4 +21,6 @@ $table-header-bg-color: lighten($brand-color-light, 8%);
 $table-header-border:   $border-color-01;
 $table-border-color:    $border-color-01;
 $image-border-color:    $border-color-01;
+$table-first-col-color:     $background-color;
+$table-first-col-bg-color:  $brand-color;
 
