index card styling

--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -7,6 +7,7 @@ $link-base-color:       #0645AD;
 $link-visited-color:    #0B0080;
 
 $brand-background-color: #f2efe5;
+$edition-card-background-color: lighten($brand-background-color, 4%);
 
 
 
