--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -31,6 +31,12 @@ table {
 }
 
 
+.edition-card-content {
+    background-color: $edition-card-background-color;
+    padding: 16px;
+    border-radius: 16px;
+}
+
 tbody td:nth-child(1) {
     color: $table-first-col-color;
     background-color: $table-first-col-bg-color;
@@ -38,6 +44,10 @@ tbody td:nth-child(1) {
 
 img {
     height: auto
+}
+
+.home img {
+    border-radius: 0px;
 }
 
 div.summary-caption {
@@ -98,7 +108,9 @@ h2.highlight {
     }
 }
 
-
+.edition-entry-subheading {
+    padding-bottom: 10px;
+}
 .edition-tagline {
     color: $brand-color;
 }
