add goatcounter analytics
https://www.goatcounter.com/ 'Easy web analytics. No tracking of
personal data'

--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -17,3 +17,14 @@
     <meta name="twitter:description" content="{{ page.excerpt | markdownify | strip_html | normalize_whitespace }}" />
 {% endif %}
 
+<script>
+    window.goatcounter = {}
+</script>
+{% if site.goatcounter_analytics.allow_local %}
+<script>
+    window.goatcounter.allow_local = true
+</script>
+{% endif %}
+
+<script data-goatcounter="https://{{site.goatcounter_analytics.code}}.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
