--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
           <a class="site-title" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
         </p>
         <p>{{ site.description | escape }}</p>
-        <a href="{{ site.github.repository_url }}">View source on GitHub</a>
+        <a href="{{ site.github.repository_url }}" data-goatcounter-click="footer-src-github" data-goatcounter-referrer="{{page.name}}">View source on GitHub</a>
       </div>
 
 
