--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 
     <div class="footer-col-wrapper">
       <div class="logo-image" class="footer-col">
-          <img src="{{ '/favicon.svg' | relative_url }}" width="125" height="125">
+          <img src="{{ '/favicon.svg' | relative_url }}" width="125" height="125" alt="Site logo, a cropped treble clef.">
       </div>
       <div class="footer-col">
         <p>
