--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,3 +1,5 @@
+<meta title="{{page.title | strip_html}}">
+
 <link rel="icon" href="{{ '/favicon.svg' | relative_url }}">
 <meta name="theme-color" content="#f8f8f8">
 {% if page.collection == "editions" %}
@@ -9,7 +11,6 @@
         <meta name="thumbnail" content="{{ page.image | absolute_url }}" />
     {% endif %}
 {% endif %}
-
 
 {% if page.description %}
     <meta name="twitter:description" content="{{ page.description | markdownify | strip_html | normalize_whitespace }}" />
