--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,4 +1,4 @@
-<meta title="{{page.title | strip_html}}">
+<meta title="{{page.title | strip_html}}" />
 
 <link rel="icon" href="{{ '/favicon.svg' | relative_url }}">
 <meta name="theme-color" content="#f8f8f8">
