--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,5 +1,4 @@
-<meta title="{{page.title | strip_html}}" />
-
+<title>"{{page.title | strip_html}}"</title>
 <link rel="icon" href="{{ '/favicon.svg' | relative_url }}">
 <meta name="theme-color" content="#f8f8f8">
 {% if page.collection == "editions" %}
