remove quotes in head title
yaml folded style escaping

--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,5 +1,5 @@
 
-<title>"{{page.title | strip_html}}"</title>
+<title>{{page.title | strip_html}}</title>
 
 <link rel="icon" href="{{ '/favicon.svg' | relative_url }}">
 <meta name="theme-color" content="#f8f8f8">
