--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
         <p>
           <a class="site-title" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
         </p>
-        <p>{{ site.description | escape }}</p>
+        <p>{{ site.subtitle | escape }}</p>
         <a href="{{ site.github.repository_url }}" data-goatcounter-click="footer-src-github" data-goatcounter-referrer="{{page.name}}">View source on GitHub</a>
       </div>
 
