--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,10 +9,18 @@
       </div>
       <div class="footer-col">
         <p>
-          <a class="site-title" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
+          <a class="site-title" href="{{ '/' | relative_url }}" data-goatcounter-click="footer-site-title" data-goatcounter-referrer="{{page.name}}">{{ site.header_title | escape }}</a>
         </p>
         <p>{{ site.subtitle | escape }}</p>
-        <a href="{{ site.github.repository_url }}" data-goatcounter-click="footer-src-github" data-goatcounter-referrer="{{page.name}}">View source on GitHub</a>
+        <div class="trigger">
+          <a class="page-link" href="{{ '/' | relative_url }}" data-goatcounter-click="footer-home" data-goatcounter-referrer="{{page.name}}">Home</a>
+          <span> | </span>
+          {%- for anchor in header_anchors -%}
+            <a class="page-link" href="{{ '/' | relative_url}}#{{anchor.id}}" data-goatcounter-click="footer-{{anchor.id}}" data-goatcounter-referrer="{{page.name}}">{{ anchor.title | escape }}</a>
+            <span> | </span>
+          {%- endfor -%}
+          <a href="{{ site.github.repository_url }}" data-goatcounter-click="footer-src-github" data-goatcounter-referrer="{{page.name}}">View source on GitHub</a>
+        </div>
       </div>
 
 
