--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -41,7 +41,7 @@ table {
     background-color: white;
     padding: 8px;
     border-radius: 0px;
-    width: 400px;
+    max-width: 400px;
     margin-bottom: 4px;
 }
 
