fix responsive layout for youtube embed
+ use youtube-nocookie

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -143,3 +143,8 @@ h2.highlight {
 .site-nav .page-link {
     color: $brand-color-dark;
 }
+
+.youtube-video {
+    aspect-ratio: 16 / 9;
+    width: 100%;
+}
