add links to youtube
add Erik Satie Gymnopedie no. 1

some updated full-page preview images

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
             <a class="page-link" href="{{ '/' | relative_url}}#{{anchor.id}}" data-goatcounter-click="footer-{{anchor.id}}" data-goatcounter-referrer="{{page.name}}">{{ anchor.title | escape }}</a>
             <span> | </span>
           {%- endfor -%}
-          <a href="{{ site.github.repository_url }}" data-goatcounter-click="footer-src-github" data-goatcounter-referrer="{{page.name}}">View source on GitHub</a>
+          <a href="{{ site.github.repository_url }}" data-goatcounter-click="footer-src-github" data-goatcounter-referrer="{{page.name}}">Website source</a>
         </div>
       </div>
 
